<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tribler Play</string>
    <string name="title_section_home">Home</string>
    <string name="title_section_downloads">Downloads</string>
    <string name="title_section_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loadingText">Loading&#8230;</string>
    <string name="action_search">Search</string>
    <string name="video_info_title">Sintel 2010</string>
    <string name="video_details_type">Type:</string>
    <string name="video_details_filesize">Filesize:</string>
    <string name="video_details_seeders">Seeders:</string>
    <string name="video_details_leechers">Leechers:</string>
    <string name="video_details_type_example">Video</string>
    <string name="video_details_filesize_example">441.90 MB</string>
    <string name="video_details_seeders_example">74 seeders</string>
    <string name="video_details_leechers_example">3 leechers</string>
    <string name="video_info_thumbnail_descr">Video info thumbnail</string>
    <string name="thumbnail_descr">Torrent thumbnail</string>
    <string name="video_info_stream_button">Play video</string>
    <string name="video_info_descr_descr">Video description</string>
    <string name="video_info_download_button">Download video</string>
    <string name="video_details_description_example">"Sintel is a short computer animated film by the Blender Institute, part of the Blender Foundation. Like the foundation's previous films Elephants Dream and Big Buck Bunny, the film was made using Blender, a free software application for animation created and supported by the same foundation. Sintel was produced by Ton Roosendaal, chairman of the Foundation, and directed by Colin Levy, an artist at Pixar Animation Studios. (code-named Durian)"</string>
    <string name="title">Title</string>
    <string name="time_0" translatable="false">0:00</string>
    <string name="please_wait">Please wait…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="surface_best_fit">Best fit</string>
    <string name="surface_fit_horizontal">Fit horizontal</string>
    <string name="surface_fit_vertical">Fit vertical</string>
    <string name="surface_fill">Fill</string>
    <string name="surface_original">Center</string>
    <string name="unseekable_stream">Unseekable stream</string>
    <string name="track_audio">Audio track</string>
    <string name="track_text">Subtitles track</string>
    <string name="volume">Volume</string>
    <string name="brightness">Brightness</string>
    <string name="encountered_error_title">Playback error</string>
    <string name="encountered_error_message">VLC encountered an error with this media.\nPlease try refreshing the media library.</string>
    <string name="hardware_acceleration_error_title">HW acceleration error</string>
    <string name="hardware_acceleration_error_message">An error occurred with hardware acceleration. Would you like to disable it and try again?</string>
    <string name="navigation_drawer">navigation_drawer</string>
    <string name="remove_download_dialog_title">Remove download</string>
    <string name="remove_download_dialog_message">Do you also want to remove the files that have already been downloaded?</string>

    <!-- Strings from downloadActivity -->
    <string name="download_info_filesize_title">Size:</string>
    <string name="download_info_down_speed_title">Speed down:</string>
    <string name="download_info_up_speed_title">Speed up:</string>
    <string name="download_info_availability_title">Availability:</string>
    <string name="download_info_status_title">Status:</string>
    <string name="download_info_eta_title">ETA:</string>
    <string name="download_info_delete_torrent_button">Remove download</string>
    
     <!-- Status strings for connecting -->
	<string name="connection_loading">Loading Tribler&#8230;</string>
   	<string name="connection_failed">Could not connect to Tribler.</string>

    <!-- Status Strings from ThumbGridFragment -->
    <string name="thumb_grid_search_submitted">"Searching&#8230;"</string>
    <string name="thumb_grid_server_started">"Type in keywords to start searching."</string>
    <string name="thumb_grid_searchview">Search videos</string>

    <!-- Strings for settings -->
    <string name="pref_supportedTorrentTypes">Supported torrent types</string>
    <string name="pref_chooseSupportedTorrentTypes">Select supported types</string>
    <string name="pref_supported_types_default">Video</string>
    <string name="pref_supportedTorrentTypes_summary">Defines which types of torrents will be listed and can be downloaded. Can be only Video or All (including Document, Picture, etc.)</string>
    <string name="pref_familyFilter">Family filter</string>
    <string name="pref_familyFilter_summary">Enable or disable Tribler\'s family filter</string>
    <string name="pref_maxDownloadRate">Maximum download rate</string>
    <string name="pref_maxDownloadRate_summary">Set the maximum download rate for Tribler</string>
    <string name="pref_maxDownloadRate_dialog_message">Set the maximum download rate in kB/s. For an unlimited rate this value should be set to 0.</string>
    <string name="pref_maxUploadRate">Maximum upload rate</string>
    <string name="pref_maxUploadRate_summary">Set the maximum upload rate for Tribler</string>
    <string name="pref_maxUploadRate_dialog_message">Set the upload download rate in kB/s. For an unlimited rate this value should be set to 0.</string>
    <string name="pref_os_licences">Open-source licences</string>
    <string name="pref_os_licences_summary">Licence details for open source software</string>
    <string name="pref_about">About this app</string>
    <string name="pref_about_description">App logo</string>

    <!-- Strings for OnQuitDialog -->
    <string name="on_quit_initial_message">Are you sure you want to close this app including the Tribler service?</string>
    <string name="on_quit_shutdown_message">Shutting down Tribler&#8230;</string>
    <string name="on_quit_title">Quit</string>

    <!-- Strings for VODDialog -->
    <string name="vod_dialog_title">Starting Stream</string>
    <string name="vod_dialog_initial_message">Please wait before the video starts playing&#8230;</string>

    <!-- Strings for PythonActivity -->
    <string name="python_activity_extract_message">Extracting assets&#8230;</string>
    <string name="python_activity_start_service_message">Starting Tribler service&#8230;</string>
    <string name="python_activity_start_activity_message">Starting the main activity&#8230;</string>

     <!-- Strings for DownloadListFragment -->
 	<string name="download_list_empty">Currently no downloads are active.</string>
 	
 	<!-- Strings for XMLRPCSettingsManager -->
 	<string name="settings_manager_fail_familyfilter">Could not set the familyfilter.</string>
 	<string name="settings_manager_fail_download">Could not set the maximum download speed.</string>
 	<string name="settings_manager_fail_upload">Could not set the maximum upload speed.</string>
 	
 	<!-- Empty string -->
 	<string name="empty"></string>
</resources>