<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/download_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp" >

        <LinearLayout
            android:id="@+id/download_info_detail_titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/download_info_filesize_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download_info_filesize_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/download_info_down_speed_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download_info_down_speed_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/download_info_up_speed_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download_info_up_speed_title"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/download_info_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/download_info_detail_titles"
            android:orientation="vertical"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/download_info_filesize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2.3GB"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/download_info_down_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1MB/s"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/download_info_up_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2MB/s"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/download_info_thumbnail"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/download_info_details"
            android:contentDescription="@string/video_info_thumbnail_descr"
            android:src="@drawable/default_thumb" />       

        <Button
            android:id="@+id/download_info_stream_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/download_info_thumbnail"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/video_info_stream_button"
            android:text="@string/video_info_stream_button" />

        <Button
            android:id="@+id/download_info_delete_torrent_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/download_info_stream_button"
            android:contentDescription="@string/video_info_download_button"
            android:text="@string/download_info_delete_torrent_button" />
        
        <TextView
            android:id="@+id/download_info_status_information_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/download_info_delete_torrent_button"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/download_info_information_title"
            android:textSize="20sp"
            android:textStyle="bold"  />
        
        <TextView 
            android:id="@+id/download_info_status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/download_info_status_information_title"
            android:text="status...."
            android:textSize="16sp"/>
        
        <TextView 
            android:id="@+id/download_info_down_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/download_info_status_text"
            android:text="download speed...."
            android:textSize="16sp"/>
        
        <TextView 
            android:id="@+id/download_info_up_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/download_info_down_text"
            android:text="upload speed...."
            android:textSize="16sp"/>
        
        <TextView 
            android:id="@+id/download_info_eta_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/download_info_up_text"
            android:text="ETA:...."
            android:textSize="16sp"/>

        <ProgressBar
            android:id="@+id/download_info_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/download_info_eta_text"
            android:paddingBottom="5dp" />

        <TextView
            android:id="@+id/download_info_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/download_info_progress_bar"
            android:contentDescription="@string/video_info_descr_descr"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/video_details_description_example"
            android:textSize="18sp" />
    </RelativeLayout>

</ScrollView>